deployment/v3/utils/httpbin/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/public
  http:
  - match:
      - uri:
          prefix: /httpbin
    rewrite:
      uri: "/"
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
    headers:
      request:
        set:
          x-forwarded-proto: https
